loader object added, now levels.load

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/*You can optionally have different images for each of these screens by setting a different background property
+style for each div.*/
+
+
 #gamecontainer {
     width:640px;
     height:480px;
@@ -18,4 +22,43 @@
 #gamestartscreen img {
     margin:10px;
     cursor:pointer;
+}
+#levelselectscreen {
+    padding-top:150px;
+    padding-left:50px;
+}
+#levelselectscreen input {
+    margin:20px;
+    cursor:pointer;
+    background:url(images/icons/level.png) no-repeat;
+    color:yellow;
+    font-size: 20px;
+    width:64px;
+    height:64px;
+    border:0;
+}
+/* Loading Screen */
+#loadingscreen {
+    background:rgba(100,100,100,0.3);   
+}
+#loadingmessage {
+    margin-top:400px;
+    text-align:center;
+    height:48px;
+    color:white;
+    background:url(images/loader.gif) no-repeat center;
+    font:12px Arial;
+}
+
+/* Loading Screen */
+#loadingscreen {
+    background:rgba(100,100,100,0.3);
+}
+#loadingmessage {
+    margin-top:400px;
+    text-align:center;
+    height:48px;
+    color:white;
+    background:url(images/loader.gif) no-repeat center;
+    font:12px Arial;
 }
